patientportal/azure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    skupper.io/address: "patient-frontend"
    skupper.io/port: "8080"
    skupper.io/proxy: "http2"
  labels:
    app: patient-frontend
  name: patient-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: quay.io/skupper/patient-portal-frontend
          ports:
            - containerPort: 8080
---
