patientportal/azure/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: demo
spec:
  host: frontend-demo.apps.azure.kgftm.azure.redhatworkshops.io
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: "1079"
  tls:
    termination: edge
  wildcardPolicy: None
